--- a/pages/login_page.html
+++ b/pages/login_page.html
@@ -18,9 +18,9 @@
         </div>
         <div class="nav-menu" id="navMenu">
             <ul>
-                <li><a href="index.html#downl" class="link">Get APE</a></li>
-                <li><a href="index.html#about" class="link">About</a></li>
-                <li><a href="index.html" class="link">Support</a></li>
+                <li><a href="../index.html#downl" class="link">Get APE</a></li>
+                <li><a href="../index.html#about" class="link">About</a></li>
+                <li><a href="../index.html" class="link">Support</a></li>
             </ul>
         </div>
         <div class="nav-button">
